<resources>
    <string name="app_name">Tinder101</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="authentication_default_error">
        Authentication failed! Try again.
    </string>
    <string name="register_default_error">
        Something wrong! Try again.
    </string>
    <string name="email_prompt">Enter your email</string>
    <string name="password_prompt">Enter your password please…</string>
    <string name="sign_up_text">Sign up</string>
    <string name="sign_in_text">Sign in</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_up_title">Create an Account</string>
    <string name="sign_in_title">Let\'s sign you in</string>
    <string name="email_error">Your email is not valid</string>
    <string name="password_error">Your password is not valid</string>
    <string name="method_text">Or continue with</string>
    <string name="Facebook">Facebook</string>
    <string name="Gmail">Google</string>
    <string name="create_profile_title">Create your profile</string>
    <string name="full_name_prompt">Enter your full name</string>
    <string name="num_prompt">Enter your phone number</string>
    <string name="full_name">Full Name</string>
    <string name="num_text">Phone Number</string>
    <string name="name_error">Your name is not valid</string>
    <string name="num_error">Your phone number must contain 10 digits</string>
    <string name="gender_text">Gender</string>
    <string name="continue_button">Continue</string>
    <string name="location_text">Location</string>
    <string name="location_error">Location is required</string>
    <string name="add_photo_title">Add your best photos</string>
    <string name="add_photo_ins">Choose your best photos to increase the rate of matching</string>
    <string name="add_interest_title">Select your interest</string>
    <string name="add_interest_ins">Select your interests to display on your profile and match with users who have similar interest.</string>
    <string name="next_text">Next</string>
    <string name="password_register_error">Your password must be between 7 to 10 characters</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="mockUpName">Minh Anh</string>
    <string name="mockUpAge">19</string>
    <string name="interest">Interests</string>
    <string name="lookingFor">Looking for</string>
    <string name="aboutMe">About me</string>
    <string name="essential">Essentials</string>
    <string name="basic">Basics</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="features">Features</string>
    <string name="profile">Profile</string>
    <string name="lifeStyle">Lifestyle</string>
    <string name="newMatches">New Matches</string>
    <string name="messages">Messages</string>
    <string name="mockUpLookingFor">Short-time, but long-term OK</string>
    <string name="mockUpEssential">1 kilometer away</string>
    <string name="mockUpDate">Jan 16, 2023 - 11:51 AM</string>
    <string name="lastOnline">7 m</string>


    <string name="mockUpChipContent">Harry Potter</string>
    <string name="mockUpType">Education</string>
    <string name='mockUpQuotes'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend</string>

    <string name="choice_announce">You have choose 5 interests</string>
    <string name="photo_error">You must choose photos to continue</string>
    <string name="success">Success!</string>
    <string name="toast_content">Your selection have been updated.</string>
    <string name="age">Age</string>
    <string name="age_prompt">Enter your age</string>
    <string name="age_error">Your age is not valid</string>
    <string name="notification_title">Notification</string>
    <string name="tinder_title">Tinder101</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>