<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity.AddInterestActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/titleCtn"
        android:layout_marginTop="@dimen/_20sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_interest_title"
            android:textColor="@color/purple_500"
            android:id="@+id/addInterestTitle"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_interest_ins"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:textStyle="normal"
            android:textAlignment="center" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:id="@+id/interestRec"/>

    </LinearLayout>
    <Button
        android:id="@+id/nextButtonId"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:layout_below="@+id/titleCtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginEnd="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/primary_button"
        android:text="@string/next_text" />
</RelativeLayout>