<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:padding="@dimen/_8sdp"
    android:layout_height="match_parent"
    tools:context=".Fragments.ChatFragment">

    <LinearLayout
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/newMatches" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/_4sdp"
                android:gravity="center">


                <LinearLayout
                    android:background="@drawable/bg_round_linear"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/lastOnline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/_5sdp"
                        android:paddingVertical="@dimen/_1sdp"
                        android:text="@string/lastOnline"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />
                </LinearLayout>


                <TextView
                    android:id="@+id/profileName"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mockUpName"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_weight="1"
                android:id="@+id/roundChatItemsDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/messages" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messageItemsDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>